<resources>
    <string name="app_name" translatable="false">RelationshipManager</string>
    <string name="write_permission" translatable="false">Write Permission</string>
    <string name="read_permission" translatable="false">Read Permission</string>
    <string name="add_person" translatable="false">Add your next friend above!</string>
    <string name="create_person" translatable="false">Add person</string>
    <string name="last_name" translatable="false">Last Name</string>
    <string name="first_name" translatable="false">First Name</string>
    <string name="birthday" translatable="false">Birthday</string>
    <string name="mobile" translatable="false">Mobile</string>
    <string name="title_activity_edit_person" translatable="false">EditPerson</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="app_welcome">Welcome to Birday</string>
    <string name="app_name_extended">Birday - Birthday Manager</string>
    <string name="leave_review_title">Review Birday</string>
    <string name="leave_review_subtitle">Leave a review to help me with the app. Keep in mind that, donations aside, this app is completely free and ad-free!</string>
    <string name="yes_review">Review!</string>
    <string name="later">Later, I swear</string>
    <string name="no_thanks">No way!</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="no_events">No birthdays! Start adding one using the button below!</string>
    <string name="no_favorites">No favorites! Press the star to save an event in your favorites!</string>
    <string name="add_favorite">Add to favorites</string>
    <string name="stats">Statistics</string>
    <string name="no_stats">No stats to show!</string>
    <string name="stats_summary">Stats summary</string>
    <string name="no_stats_description">You don\'t have enough birthdays to generate stats. Add some and come back later!</string>
    <plurals name="stats_total">
        <item quantity="one">Birday is helping you to remember a total of %d birthday</item>
        <item quantity="other">Birday is helping you to remember a total of %d birthdays</item>
    </plurals>
    <string name="next_event">Next event</string>
    <string name="no_next_event">No birthdays to show!</string>
    <string name="no_next_event_description">You haven\'t entered or imported a birthday yet. Add one and let Birday help you!</string>
    <string name="next_age_years">Years</string>
    <string name="event_others">and others</string>
    <plurals name="days_left">
        <item quantity="one">%d day left</item>
        <item quantity="other">%d days left</item>
    </plurals>
    <string name="customization">Customization</string>
    <string name="app_behavior">App behavior</string>
    <string name="additional_notification_name">Additional notification</string>
    <string name="additional_notification_description">Send an additional notification days before the event. %s</string>
    <string name="no_additional_notification">No additional notification</string>
    <string name="one_day_before">One day before</string>
    <string name="two_days_before">Two days before</string>
    <string name="three_days_before">Three days before</string>
    <string name="four_days_before">Four days before</string>
    <string name="five_days_before">Five days before</string>
    <string name="six_days_before">Six days before</string>
    <string name="seven_days_before">Seven days before</string>
    <string name="vibration_name">Vibration</string>
    <string name="vibration_description_on">Vibrate when a button is pressed</string>
    <string name="vibration_description_off">No vibrations when a button is pressed</string>
    <string name="date_format_name">Date format</string>
    <string name="notification_hour_name">Notification hour</string>
    <string name="notification_hour_description">%s \n\nPlease note that the notification might not work when the app is killed by the system in some Huawei, Xiaomi and OnePlus devices. Refer to dontkillmyapp.com for more information</string>
    <string name="accent_description">Change the default accent color</string>
    <string name="accent_name">Accent color</string>
    <string name="theme_description">Use a dark, light or automatic app theme</string>
    <string name="theme_name">App theme</string>
    <string name="aqua">Aqua</string>
    <string name="brown">Brown</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="teal">Teal</string>
    <string name="violet">Violet</string>
    <string name="pink">Pink</string>
    <string name="light_blue">Light Blue</string>
    <string name="red">Red</string>
    <string name="lime">Lime</string>
    <string name="crimson">Crimson</string>
    <string name="system_theme">System default</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="shimmer_name">Shimmer effect</string>
    <string name="shimmer_description_on">A shiny animation here and there</string>
    <string name="shimmer_description_off">No additional graphic effects</string>
    <string name="dark_widget_name">Dark widget</string>
    <string name="dark_widget_description_on">The widget uses the dark theme</string>
    <string name="dark_widget_description_off">The widget uses the light theme</string>
    <string name="import_export">Import and Export</string>
    <string name="import_contacts_title">Import birthdays from contacts</string>
    <string name="import_contacts_description">Make sure to modify the events with missing years to always have accurate statistics!</string>
    <string name="import_success">Import completed successfully!</string>
    <string name="import_nothing_found">No birthday found!</string>
    <string name="import_failed">Something went wrong!</string>
    <string name="missing_permission_contacts">The contact permission was denied. Try again or activate the permission manually,
    or the contacts import won\'t work!</string>
    <string name="missing_permission_contacts_forever">Birday can\'t ask for permission to import contacts,
    since you checked "never ask again". Enable it manually!</string>
    <string name="birday_import_title">Import a Birday backup</string>
    <string name="birday_import_description">Choose a valid Birday backup to restore your birthdays. All existing data
    will be overwritten!</string>
    <string name="birday_export_title">Export and share birthdays</string>
    <string name="birday_export_description">Export the available birthdays to a backup, and share them if you want. The file is in
    Android/data/com.example.relationshipmanager/files</string>
    <string name="birday_import_success">Import completed!</string>
    <string name="birday_import_failure">Import failed. Did you choose the file correctly?</string>
    <string name="birday_import_invalid_file">Import failed. The chosen file is not a Birday backup!</string>
    <string name="birday_export_success">Export completed!</string>
    <string name="birday_export_failure">Export failed. Whoopsie!</string>
    <string name="birday_export_nothing_found">Nothing to export!</string>
    <string name="surname_first">Surname first</string>
    <string name="surname_first_description_on">Show the surname before the name</string>
    <string name="surname_first_description_off">Show the name before the surname</string>
    <string name="hide_images">Hide images</string>
    <string name="hide_images_description_on">Event images hidden</string>
    <string name="hide_images_description_off">Event images visible</string>
    <string name="notification_only_favorites" translatable="false">Favorites only</string>
    <string name="notification_only_favorites_description_on" translatable="false">Send a notification for favorite events only</string>
    <string name="notification_only_favorites_description_off" translatable="false">Send a notification for every event inserted</string>
    <string name="dev_name" translatable="false">m.i.n.a.r.</string>
    <string name="dev_description">I\'m a polite guy and I like beautiful things, like animations, icons, sport cars and 3D printing. I work as a designer and computer engineer.</string>
    <string name="dev_email" translatable="false">minar.tastic@gmail.com</string>
    <string name="dev_personal_site" translatable="false">https://minar.ml</string>
    <string name="dev_instagram" translatable="false">https://www.instagram.com/minar.tastic/</string>
    <string name="dev_twitter" translatable="false">https://twitter.com/MinarTastic</string>
    <string name="dev_github" translatable="false">https://github.com/m-i-n-a-r</string>
    <string name="dev_other_apps" translatable="false">https://play.google.com/store/apps/dev?id=7720251761301594831</string>
    <string name="easter_egg">Nice logo, huh? ;D</string>
    <string name="new_event">New birthday</string>
    <string name="new_event_description">Enter a person you care about, and Birday will help you to remember their birthday!</string>
    <string name="insert_event">Insert birthday</string>
    <string name="cancel">Cancel</string>
    <string name="insert_name_hint">Insert First Name</string>
    <string name="insert_surname_hint">Insert Last Name</string>
    <string name="insert_date_hint">Select a date</string>
    <string name="invalid_value_name">Invalid name. Numbers and symbols aren\'t allowed!</string>
    <string name="consider_year">Consider the year</string>
    <string name="event_actions">Actions</string>
    <string name="event_actions_description">Here you can change or remove this event!</string>
    <string name="edit_event">Edit event</string>
    <string name="delete_event">Delete event</string>
    <string name="update_event">Update event</string>
    <string name="share_event">Share event</string>
    <string name="deleted">Deleted!</string>
    <string name="event_details">Details</string>
    <string name="birth_date">Birth date</string>
    <string name="next_age">Next age:</string>
    <string name="zodiac_sign">Zodiac sign:</string>
    <string name="chinese_zodiac_sign">Chinese sign:</string>
    <string name="event_apps">Quick apps</string>
    <string name="event_apps_description">Apps to wish all the best rapidly!</string>
    <string name="whatsapp" translatable="false">Whatsapp</string>
    <string name="signal" translatable="false">Signal</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="textMessage">Text message</string>
    <string name="dialer">Dialer</string>
    <string name="wishes">Happy birthday!</string>
    <string name="no_default_dialer">No default dialer app found!</string>
    <string name="no_default_sms">No default SMS app found!</string>
    <string name="did_you_know">Did you know?</string>
    <string name="age_average">The average age is %s</string>
    <string name="oldest_person">The oldest person is %s</string>
    <string name="youngest_person">The youngest person is %s</string>
    <string name="most_common_month">The most common month of birth is %s</string>
    <string name="most_common_decade">The most common decade of birth is %s</string>
    <string name="most_common_age_range">The most common age range is %1$s-%2$s</string>
</resources>