<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/goodGray"
    tools:context=".ContactsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="472dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:scrollbars="none">

        <TableLayout
            android:id="@+id/table_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button"
            android:layout_margin="10dp"
            android:background="@android:color/white"
            android:gravity="center_horizontal">

            <!-- Table Heading -->
            <TableRow android:background="@android:color/holo_blue_bright">

                <TextView
                    android:id="@+id/cell_1_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/last_name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/cell_1_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/first_name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/cell_1_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/birthday"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/cell_1_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/mobile"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </TableRow>

        </TableLayout>

    </ScrollView>

</RelativeLayout>